Added link to first recipe page in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="https://www.allrecipes.com/recipe/212884/channa-masala-chickpea-curry/">Channa Masala</a>
     </body>
 </html>
 
