Added link of home page to recipe page

--- a/recipes/channa-masala.html
+++ b/recipes/channa-masala.html
@@ -6,7 +6,7 @@
     <title>Odin Recipes | Channa Masala</title>
 </head>
 <body>
-    
+    <a href="../index.html">Home</a>
     <h1>Channa Masala</h1>
 
     
