Added image of recipe in channa-masala.html

--- a/recipes/channa-masala.html
+++ b/recipes/channa-masala.html
@@ -8,6 +8,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Channa Masala</h1>
+    <img src="./recipes-images/channa-masala.webp" alt="channa-masala" height="310" width="310">
 
     
 </body>
