Added description of the recipe in channa-masala.html

--- a/recipes/channa-masala.html
+++ b/recipes/channa-masala.html
@@ -10,6 +10,9 @@
     <h1>Channa Masala</h1>
     <img src="./recipes-images/channa-masala.webp" alt="channa-masala" height="310" width="310">
 
+    <h2>Description</h2>
+    <p>  Channa Masala is a hearty and flavorful North Indian dish made with chickpeas simmered in a spiced tomato-onion gravy. It's a popular vegetarian dish that's both filling and nutritious, commonly served with rice or flatbreads like roti, naan, or bhatura.</p>
+    <p> Packed with aromatic spices like cumin, coriander, garam masala, and turmeric, this dish delivers a bold and comforting flavor profile. It's perfect for cozy dinners or as part of a festive Indian meal, and it's easy to make with pantry staples.</p>
     
 </body>
 </html>
