Added ingredients of the recipe in recipe page

--- a/recipes/channa-masala.html
+++ b/recipes/channa-masala.html
@@ -13,6 +13,20 @@
     <h2>Description</h2>
     <p>  Channa Masala is a hearty and flavorful North Indian dish made with chickpeas simmered in a spiced tomato-onion gravy. It's a popular vegetarian dish that's both filling and nutritious, commonly served with rice or flatbreads like roti, naan, or bhatura.</p>
     <p> Packed with aromatic spices like cumin, coriander, garam masala, and turmeric, this dish delivers a bold and comforting flavor profile. It's perfect for cozy dinners or as part of a festive Indian meal, and it's easy to make with pantry staples.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 tomatoes, diced</li>
+        <li>1 onion, chopped</li>
+        <li>1 (1 inch) piece fresh ginger, peeled and roughly chopped</li>
+        <li>1 tablespoon rice flour</li>
+        <li>1 tablespoon olive oil</li>
+        <li>1 teaspoon cumin seeds</li>
+        <li>2 (15 ounce) cans garbanzo beans, rinsed and drained</li>
+        <li>1 teaspoon curry powder</li>
+        <li>1 teaspoon salt</li>
+        <li>1 teaspoon chopped fresh cilantro</li>
+    </ul>
     
 </body>
 </html>
