Added steps to make the recipe in recipe page

--- a/recipes/channa-masala.html
+++ b/recipes/channa-masala.html
@@ -28,5 +28,17 @@
         <li>1 teaspoon chopped fresh cilantro</li>
     </ul>
     
+    <h2>Steps</h2>
+    <ol>
+        <li>Heat oil in a pan over medium heat. Add cumin seeds and let them sizzle for a few seconds.</li>
+        <li>Add chopped onions and sauté until golden brown.</li>
+        <li>Stir in the ginger-garlic paste and chopped green chili. Cook for 1-2 minutes until the raw smell disappears.</li>
+        <li>Add the chopped tomatoes and cook until they turn soft and the oil begins to separate from the masala.</li>
+        <li>Mix in the turmeric, coriander powder, red chili powder, and salt. Cook for another minute.</li>
+        <li>Add the chickpeas and stir to coat them with the masala.</li>
+        <li>Pour in a little water to adjust the consistency and simmer for 10-15 minutes, allowing the flavors to blend.</li>
+        <li>Sprinkle garam masala on top and give it a final stir.</li>
+        <li>Garnish with fresh coriander leaves and serve hot with rice, roti, or naan.</li>
+    </ol>
 </body>
 </html>
