Added link of recipe page to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>Odin Recipes</h1>
 
         <a href="https://www.allrecipes.com/recipe/212884/channa-masala-chickpea-curry/">Channa Masala</a>
+        <a href="https://www.allrecipes.com/recipe/212366/rajma-kidney-bean-curry/">Rajma</a>
     </body>
 </html>
 
