Added links of my recipe pages invindex.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="https://www.allrecipes.com/recipe/212884/channa-masala-chickpea-curry/">Channa Masala</a>
-        <a href="https://www.allrecipes.com/recipe/212366/rajma-kidney-bean-curry/">Rajma</a>
+        <a href="./recipes/channa-masala.html">Channa Masala</a>
+        <a href="./recipes/rajma.html">Rajma</a>
     </body>
 </html>
 
