Added recipe page links in unordered list

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-
-        <a href="./recipes/channa-masala.html">Channa Masala</a>
-        <a href="./recipes/rajma.html">Rajma</a>
+        <ul>
+            <li><a href="./recipes/channa-masala.html">Channa Masala</a></li>
+            <li> <a href="./recipes/rajma.html">Rajma</a></li>
+        </ul>
+        
+       
     </body>
 </html>
 
