--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="./recipes/channa-masala.html">Channa Masala</a></li>
             <li> <a href="./recipes/rajma.html">Rajma</a></li>
+            <li><a href="./recipes/kadhi.html">Kadhi</a></li>
         </ul>
         
        
