--- a/recipes/kadhi.html
+++ b/recipes/kadhi.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Kadhi</h1>
-    <img src="./kadhi.html" alt="kadhi" height="310" width="310">
+    <img src="./recipes-images/kadhi.webp" alt="kadhi" height="310" width="310">
 
     <h2>Ingredients</h2>
     <ul>
